# rpi-dashboard

./: CMakeLists.txt  ConsumptionGraphView.qml  PowerChartView.qml  README.md  TemperatureChartView.qml  TemperatureSeries.qml  WaterChartView.qml  electricityconsumption.cpp  electricityconsumption.h  influxdbconnection.cpp  influxdbconnection.h  influxdbdata.cpp  influxdbdata.h  influxdbquery.cpp  influxdbquery.h  main.cpp  main.qml  power_line_graph_worker.mjs  serieshelper.cpp  serieshelper.h  temperature_line_graph_worker.mjs  water_line_graph_worker.mjs
